Update package.json - type module

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "bugs": {
     "url": "https://github.com/enjoycoding/vite-plugin-mock-server/issues"
   },
+  "type": "module",
   "homepage": "https://github.com/enjoycoding/vite-plugin-mock-server#readme",
   "devDependencies": {
     "@types/node": "^15.12.4",
