--- a/example2/package.json
+++ b/example2/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "runtest": "vite --mode=test"
+    "runtest": "vite --config test-vite.config.ts"
   },
   "dependencies": {
     "vue": "^3.3.11"
@@ -16,7 +16,6 @@
     "node-fetch": "^3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-mock-server": "^1.1.0",
     "vue-tsc": "^1.8.25"
   }
 }
