--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "strict": true,
-    "sourceMap": true,
+    "jsx": "preserve",
     "resolveJsonModule": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
-    "strictNullChecks": false,
-    "declaration": true,
-    "noEmit": false,
-    "lib": ["esnext", "dom"],
+    "lib": ["ESNext", "DOM", "es2019"],
+    "skipLibCheck": true,
+    "noEmit": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts"],
 }
