--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
   "devDependencies": {
     "@types/node": "^15.12.4",
     "del-cli": "^5.1.0",
-    "typescript": "^4.3.4",
+    "typescript": "^5.3.3",
     "vite": "^2.3.8"
   },
   "dependencies": {
-    "@howiefh/ant-path-matcher": "0.0.2"
-  }
+    "@howiefh/ant-path-matcher": "0.0.4"
+  },
+  "files": [
+    "./dist",
+    "./src"
+  ]
 }
