--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,13 @@
     "moduleResolution": "Node",
     "strict": true,
     "jsx": "preserve",
+    "declaration": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "noEmit": true,
+    "noEmit": false,
     "outDir": "dist"
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"],
