use the same test cases in both examples

--- a/example2/package.json
+++ b/example2/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-stopdev": "^1.0.0",
     "vue-tsc": "^1.8.25"
   }
 }
