--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "node-fetch-commonjs": "^3.3.2",
     "typescript": "^4.3.2",
     "vite": "^2.9.12",
+    "vite-plugin-stopdev": "^1.0.0",
     "vue-tsc": "^0.0.24"
   }
 }
